--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".ActivityB" />
         <activity android:name=".ActivityC" />
-        <activity android:name=".DialogActivity"></activity>
+        <activity android:name=".DialogActivity"
+            android:theme="@android:style/Theme.Holo.Dialog" >
+        </activity>
     </application>
 
 </manifest>
